# tele-claude

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  flake.nix  package-lock.json  package.json  pyproject.toml  tele_claude.py  tele_claude_format.py  tele_claude_hooks.py  tele_claude_state.py  tsconfig.json
.claude/: settings.json
.claude/hooks/: telegram-notify.sh  telegram-post-tool-use.sh  telegram-progress.sh  telegram-reply.sh  telegram-subagent-stop.sh  telegram-teammate-idle.sh
.github/workflows/: ci.yml
src/: bot.ts  env.ts  format-cli.ts  format.ts  hooks.ts  index.ts  state.ts  telegram.ts  tmux.ts  util.ts
workflows/: ci.yml
